[gd_scene load_steps=18 format=3 uid="uid://dtfn4xa2aup4r"]

[ext_resource type="Script" path="res://grid_map/main.gd" id="1_lxxch"]
[ext_resource type="PackedScene" uid="uid://d0l17hurp0nx6" path="res://grid_map/tile_map_layer.tscn" id="2_g2dei"]
[ext_resource type="Texture2D" uid="uid://bfphxvjfwitkj" path="res://assets/tile-selected.png" id="4_cegh4"]
[ext_resource type="Texture2D" uid="uid://k8f8chropqdf" path="res://assets/empty-frame.png" id="5_4o0g6"]
[ext_resource type="Script" path="res://grid_map/tile_map_layer_2.gd" id="6_7m66c"]
[ext_resource type="Texture2D" uid="uid://3qrluqfdliki" path="res://assets/plate.png" id="6_geo4b"]
[ext_resource type="Texture2D" uid="uid://kpmagcd4x2kn" path="res://assets/plate_back.png" id="7_kcp4m"]
[ext_resource type="PackedScene" uid="uid://dnxt4oyogmrlp" path="res://robot/robot.tscn" id="7_wq0xb"]
[ext_resource type="Texture2D" uid="uid://b1wo74es3l43h" path="res://assets/plate_jump.png" id="8_pfocm"]
[ext_resource type="PackedScene" uid="uid://dlvcty03gagif" path="res://inv_ui/inv_ui.tscn" id="8_xkbgn"]
[ext_resource type="PackedScene" uid="uid://blfmlj6kctvcq" path="res://plate/arrow_plate.tscn" id="10_5vfaw"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_udjo3"]
texture = ExtResource("4_cegh4")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_1t5d1"]
texture = ExtResource("5_4o0g6")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_jqt5s"]
texture = ExtResource("6_geo4b")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_g541j"]
texture = ExtResource("7_kcp4m")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_gtwl2"]
texture = ExtResource("8_pfocm")
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_j348i"]
sources/0 = SubResource("TileSetAtlasSource_udjo3")
sources/1 = SubResource("TileSetAtlasSource_1t5d1")
sources/3 = SubResource("TileSetAtlasSource_jqt5s")
sources/4 = SubResource("TileSetAtlasSource_g541j")
sources/5 = SubResource("TileSetAtlasSource_gtwl2")

[node name="Node2D" type="Node2D"]
script = ExtResource("1_lxxch")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 3.0
offset_top = -4.0
offset_right = 1353.0
offset_bottom = 1013.0
mouse_filter = 1
color = Color(0.615686, 0.462745, 0.345098, 1)

[node name="TileMapLayer" parent="." instance=ExtResource("2_g2dei")]
position = Vector2(0, 0)

[node name="FrameTileMapLayer" type="TileMapLayer" parent="."]
tile_set = SubResource("TileSet_j348i")
script = ExtResource("6_7m66c")

[node name="Robot" parent="." instance=ExtResource("7_wq0xb")]
position = Vector2(135, 344)

[node name="Camera2D2" type="Camera2D" parent="."]
position = Vector2(288, 377)
zoom = Vector2(3, 3)

[node name="ArrowPlate" parent="." instance=ExtResource("10_5vfaw")]
position = Vector2(199, 407)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Inv_UI" parent="CanvasLayer" instance=ExtResource("8_xkbgn")]
layout_direction = 1
anchor_bottom = 0.124
offset_right = -6.0
offset_bottom = -7.2

[connection signal="can_place" from="FrameTileMapLayer" to="." method="_on_frame_tile_map_layer_can_place"]
[connection signal="item_in_mouse" from="CanvasLayer/Inv_UI" to="." method="_on_inv_ui_item_in_mouse"]
